--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@ngconf/router": [
+        "dist/router/router",
+        "dist/router"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
